--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <div class="contents">
         <p>パスワードを入れてください。</p>
         <input class="passward">
-        <input class="login" type="submit" value="ログイン" href="home.html">
+        <button class="login" type="button" onclick="location.href='home.html'">ログイン</button>
       </div>
     </div>
 
