--- a/kurenai.html
+++ b/kurenai.html
@@ -53,7 +53,7 @@
                 <div class="pc">
                     <p>PC</p>
                     <p><a href="#">ミッシェル</a>：<a href="#">戦犯</a></p>
-                    <p><a href="#">ニーフリット</a>：<a href="#">管理人</a></p>
+                    <p><a href="nefrit.html">ニーフリット</a>：<a href="#">管理人</a></p>
                     <p><a href="#">ガネッシュ</a>：<a href="#">上司</a></p>
                     <p><a href="#">青子</a>：<a href="#">創造主</a></p>
                 </div>
