--- a/home.html
+++ b/home.html
@@ -50,27 +50,187 @@
                 <li><a href="#">殺人　趣味レーター</a></li>
                 <li><a href="#">英雄たちのフェルンウェー</a></li>
                 <li><a href="#">貴方は私を二度殺すのね</a></li>
+                <li><a href="#">太古の座敷牢</a></li>
+                <li><a href="#">その髄に君を呼ぶ</a></li>
+                <li><a href="#">遊園地は死で遊ぶ</a></li>
+                <li><a href="#">デッドレックエンコード</a></li>
+                <li><a href="#">white room-矛盾本能-</a></li>
+                <li><a href="#">私、友蔵の孫の友人です。</a></li>
+                <li><a href="#">混沌を運ぶ者</a></li>
+                <li><a href="#">because, baby, i love you</a></li>
+                <li><a href="#">壊胎No.1</a></li>
+                <li><a href="#">壊胎No.2</a></li>
+                <li><a href="#">探索者ピックアップガチャ</a></li>
+                <li><a href="#">カタシロNo.1</a></li>
+                <li><a href="#">カタシロNo.2</a></li>
+                <li><a href="#">カタシロNo.3</a></li>
+                <li><a href="#">カタシロNo.4</a></li>
+                <li><a href="#">棄教</a></li>
+                <li><a href="#">果てにてNo.1</a></li>
+                <li><a href="#">果てにてNo.2</a></li>
+                <li><a href="#">果てにてNo.3</a></li>
+                <li><a href="#">果てにてNo.4</a></li>
+                <li><a href="#">果てにてNo.5</a></li>
+                <li><a href="#">密室シェアハウス</a></li>
+                <li><a href="#">孕む緑と愛を視よ</a></li>
+                <li><a href="#">ONCE FOR BOTH</a></li>
+                <li><a href="#">雨の日のタクシー</a></li>
+                <li><a href="#">チョコレートコスモス</a></li>
+                <li><a href="#">薄明</a></li>
+                <li><a href="#">アジサイ喫茶店</a></li>
+                <li><a href="#">とある幸せな家族の話</a></li>
+                <li><a href="#">傀逅</a></li>
+                <li><a href="#">豪華客船と怪盗団</a></li>
+                <li><a href="#">庭師は何を口遊む</a></li>
+                <li><a href="#">海も枯れるまでNo.1</a></li>
+                <li><a href="#">海も枯れるまでNo.2</a></li>
+                <li><a href="#">海も枯れるまでNo.3</a></li>
+                <li><a href="#">沼男は誰だ？</a></li>
+                <li><a href="#">再上映</a></li>
+                <li><a href="#">セーラー服を脱がさないで</a></li>
+                <li><a href="#">極楽浄土に棲む魚ver上司No.1</a></li>
+                <li><a href="#">極楽浄土に棲む魚ver創造主No.1</a></li>
+                <li><a href="#">極楽浄土に棲む魚ver創造主NO.2</a></li>
+                <li><a href="#">シュガーレス・ハッピーバレンタイン</a></li>
+                <li><a href="#">チョコレイトはいかが？</a></li>
+                <li><a href="#">ソープスクール</a></li>
+                <li><a href="#">落園NO.1</a></li>
+                <li><a href="#">落園No.2</a></li>
+                <li><a href="#">落園No.3</a></li>
+                <li><a href="#">プリズムNo.1</a></li>
+                <li><a href="#">さよならの向こう側</a></li>
+                <li><a href="#">カタシロアナザーNo.1</a></li>
+                <li><a href="#">カタシロアナザーNo.2</a></li>
+                <li><a href="#">カタシロアナザーNo.3</a></li>
+                <li><a href="#">カタシロアナザーNo.4</a></li>
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
                 <li><a href="#"></a></li>
             </ul>
         </div>
+
         <div class="list">
           <h2 id="i2">キャラクター一覧</h2>
-            <ul>
-                <li><a href="#"></a></li>
-                <li><a href="#">ガネッシュ</a></li>
-                <li><a href="#"></a></li>
-                <li><a href="#"></a></li>
-                <li><a href="#">ニーフリット</a></li>
-                <li><a href="#"></a></li>
-                <li><a href="#">野良陸羅</a></li>
+            <div class="member-list">
+              <h3>運転手</h3>
+              <ul>
                 <li><a href="#"></a></li>
                 <li><a href="#"></a></li>
                 <li><a href="#"></a></li>
-                <li><a href="#">マルゲリータ・ステファニー</a></li>
                 <li><a href="#"></a></li>
                 <li><a href="#"></a></li>
                 <li><a href="#"></a></li>
-            </ul>
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
+              </ul>
+            </div>
+            <div class="member-list">
+              <h3>管理人</h3>
+              <ul>
+                <li><a href="nefrit.html">ニーフリット</a></li>
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
+              </ul>
+            </div>
+            <div class="member-list">
+              <h3>上司</h3>
+              <ul>
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
+              </ul>
+            </div>
+            <div class="member-list">
+              <h3>スピリチュアルな存在。</h3>
+              <ul>
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
+              </ul>
+            </div>
+            <div class="member-list">
+              <h3>戦犯</h3>
+              <ul>
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
+              </ul>
+            </div>
+            <div class="member-list">
+              <h3>創造主</h3>
+              <ul>
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
+              </ul>
+            </div>
+            
         </div>
         <div class="list">
           <h2 id="i3">独り言卓メンバー一覧</h2>
