--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <body>
    
     <div class="main">
-      <input type="button" value="パスワードを入力して秘密のページへアクセスする" onclick="gate();">
+      <input class="main-btn" type="button" value="パスワードを入力して秘密のページへアクセスする" onclick="gate();">
     </div>
 
   </body>
