--- a/kurenai.html
+++ b/kurenai.html
@@ -4,22 +4,34 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>独り言卓INDEX</title>
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Dosis:300,400,500,600,700">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
+
     <link rel="stylesheet" href="home.css">
     <link rel="stylesheet" href="responsive.css">
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
   </head>
   <body>
+
     <header>
         <div class="header-container">
             <div class="header-left">
                 <img class="logo" src="header-logo1.gif">
             </div>
-            <span class="fa fa-bars menu-icon"></span>
-            <div class="header-right">
-                <a href="index.html">ログイン</a>
-                <a href="home.html">ホーム</a>
+            <div class="menu">
+                <span class="fa fa-bars menu-icon"></span>
+
+                <div class="home-index">
+                    <a href="home.html#i1">シナリオ一覧</a>
+                    <a href="home.html#i2">キャラクター一覧</a>
+                    <a href="home.html#i3">独り言卓メンバー一覧</a>
+                </div>
             </div>
         </div>
+            
     </header>
 
     <div class="top">
@@ -71,5 +83,7 @@
         <img class="footer-logo" src="footer-logo1.gif">
       </div>
     </footer>
+
+    <script type="text/javascript" src="character.js"></script>
   </body>
 </html>
