--- a/nefrit.html
+++ b/nefrit.html
@@ -4,59 +4,97 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>独り言卓INDEX</title>
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Dosis:300,400,500,600,700">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
+
     <link rel="stylesheet" href="home.css">
     <link rel="stylesheet" href="responsive.css">
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
   </head>
   <body>
+
     <header>
         <div class="header-container">
             <div class="header-left">
                 <img class="logo" src="header-logo1.gif">
             </div>
-            <span class="fa fa-bars menu-icon"></span>
-            <div class="header-right">
-                <a href="index.html">ログイン</a>
-                <a href="home.html">ホーム</a>
+            <div class="menu">
+                <span class="fa fa-bars menu-icon"></span>
+
+                <div class="home-index">
+                    <a href="home.html#i1">シナリオ一覧</a>
+                    <a href="home.html#i2">キャラクター一覧</a>
+                    <a href="home.html#i3">独り言卓メンバー一覧</a>
+                </div>
             </div>
         </div>
+            
     </header>
 
+    <!-- キャラクター名 -->
     <div class="top">
       <h1 class="title">ニーフリット</h1>
       <p>にーふりっと</p>
     </div>
 
-    <div class="gallery">
-        <img src="nefrit1.png" class="picture">
-        <img src="nefrit2.jpg" class="picture">
-        <img src="nefrit3.jpeg" class="picture">
-        <img src="nefrit4.jpeg" class="picture">
-        <img src="nefrit5.jpeg" class="picture">
+    <!-- スライダー -->
+    <div id="stamps" class="stamps-section">
+      <div class="container">
+        <div id="stamp-carousel" class="carousel slide" data-ride="carousel"> 
+          <ol class="carousel-indicators">
+            <li data-target="#stamp-carousel" data-slide-to="0" class="active"></li>
+            <li data-target="#stamp-carousel" data-slide-to="1" class=""></li>
+            <li data-target="#stamp-carousel" data-slide-to="2" class=""></li>
+            <li data-target="#stamp-carousel" data-slide-to="3" class=""></li>
+            <li data-target="#stamp-carousel" data-slide-to="4" class=""></li>
+          </ol>
+          <div class="carousel-inner">
+            <div class="item stamp-box active">
+              <img src="nefrit1.png" class="stamp-image">
+            </div>
+            <div class="item stamp-box">
+                <img src="nefrit2.jpg" class="stamp-image">
+              </div>
+            <div class="item stamp-box">
+              <img src="nefrit3.jpeg" class="stamp-image">
+            </div>
+            <div class="item stamp-box">
+              <img src="nefrit4.jpeg" class="stamp-image">
+            </div>
+            <div class="item stamp-box">
+                <img src="nefrit5.jpeg" class="stamp-image">
+              </div>
+          </div> 
+        </div>
+      </div>
     </div>
 
+    <!-- キャラクターシート -->
     <div class="items">
-        <div class="item">
+        <div class="chara-item">
             <p class="item-left">年齢</p>
             <p class="item-right">14歳</p>
         </div>
-        <div class="item">
+        <div class="chara-item">
             <p class="item-left">性別</p>
             <p class="item-right">男</p>
         </div>
-        <div class="item">
+        <div class="chara-item">
             <p class="item-left">職業</p>
             <p class="item-right">中学生、ゲーマー</p>
         </div>
-        <div class="item">
+        <div class="chara-item">
             <p class="item-left">キャラクター作成者</p>
             <p class="item-right"><a href="#">管理人</a></p>
         </div>
-        <div class="item">
+        <div class="chara-item">
             <p class="item-left">カラー</p>
             <p class="item-right">水色がかった白、黄色</p>
         </div>
-        <div class="item">
+        <div class="chara-item">
             <div class="item-left">
                 <p>ステータス</p>
                 <div class="status bottom">
@@ -77,7 +115,7 @@
                <p>EDU：12</p>
             </div>
         </div>
-        <div class="item">
+        <div class="chara-item">
             <p class="item-left">技能値</p>
             <div class="item-right status">
                 <p>ccb<=57　　SAN</p>
@@ -104,11 +142,11 @@
                 <p>1d6+1+db　ブラックニンジャソード</p>
             </div>
         </div>
-        <div class="item">
+        <div class="chara-item">
             <p class="item-left">設定</p>
             <p class="item-right">かわいいのが好き。</p>
         </div>
-        <div class="item">
+        <div class="chara-item">
             <p class="item-left">参加したシナリオ</p>
             <div class="item-right status">
                 <p><a href="kurenai.html">紅の幻想</a></p>
@@ -119,27 +157,29 @@
                 <p><a href="#">鳥籠のカナリア</a></p>
             </div>
         </div>
-        <div class="item">
+
+        <!-- コメント-->
+        <div class="chara-item">
             <p class="item-left">作成者のコメント</p>
             <p class="item-right">かわいいよおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおお</p>
         </div>
-        <div class="item">
+        <div class="chara-item">
             <p class="item-left">運転手のコメント</p>
             <p class="item-right"></p>
         </div>
-        <div class="item">
+        <div class="chara-item">
             <p class="item-left">上司のコメント</p>
             <p class="item-right"></p>
         </div>
-        <div class="item">
+        <div class="chara-item">
             <p class="item-left">スピリチュアルな存在。のコメント</p>
             <p class="item-right"></p>
         </div>
-        <div class="item">
+        <div class="chara-item">
             <p class="item-left">戦犯のコメント</p>
             <p class="item-right"></p>
         </div>
-        <div class="item">
+        <div class="chara-item">
             <p class="item-left">創造主のコメント</p>
             <p class="item-right"></p>
         </div>
@@ -151,5 +191,7 @@
         <img class="footer-logo" src="footer-logo1.gif">
       </div>
     </footer>
+
+    <script type="text/javascript" src="character.js"></script>
   </body>
 </html>
