--- a/kurenai.html
+++ b/kurenai.html
@@ -9,7 +9,9 @@
     <link rel="shortcut icon" href="favicon.ico">
     <link rel="icon" type="image/png" href="android-chrome-256x256.png">
     
-
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Dosis:300,400,500,600,700">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 
     <link rel="stylesheet" href="home.css">
     <link rel="stylesheet" href="responsive.css">
