--- a/kurenai.html
+++ b/kurenai.html
@@ -27,9 +27,9 @@
                 <span class="fa fa-bars menu-icon"></span>
 
                 <div class="home-index">
-                    <a href="home.html#i1">シナリオ一覧</a>
-                    <a href="home.html#i2">キャラクター一覧</a>
-                    <a href="home.html#i3">独り言卓メンバー一覧</a>
+                    <p><a href="home.html#i1">シナリオ一覧</a></p>
+                    <p><a href="home.html#i2">キャラクター一覧</a></p>
+                    <p><a href="home.html#i3">独り言卓メンバー一覧</a></p>
                 </div>
             </div>
         </div>
