これ忘れてた

--- a/kurenai.html
+++ b/kurenai.html
@@ -35,6 +35,11 @@
         </div>
             
     </header>
+    
+    <script>
+        var scenarioID = 1;
+        var jin = 0;
+    </script>
 
     <div class="top">
         <h1 class="title" id="title"></h1>
