--- a/kurenai.html
+++ b/kurenai.html
@@ -63,6 +63,9 @@
                     <th>プレイした日付</th> <td><p id="date"></p></td>
                 </tr>
                 <tr>
+                  <th>プレイ時間</th> <td><p id="playTime"></p></td>
+                </tr>
+                <tr>
                     <th>KP</th> <td><p id="KP"></p></td>
                 </tr>
                 <tr>
