--- a/manager.html
+++ b/manager.html
@@ -59,9 +59,9 @@
         <table>
             <tr>
                 <th>PLとして参加したシナリオ</th><th>キャラクター</th>
-            </tr>
-            <tr id="scenarioPl"></tr>     
+            </tr>   
         </table>
+        <div id="scenarioPl"></div>
     </div>
 
     <footer>
