--- a/manager.html
+++ b/manager.html
@@ -58,10 +58,9 @@
         </table>
         <table>
             <tr>
-                <th>PLとして参加したシナリオ</th><th>キャラクター</th>
+                <th>PLとして参加したシナリオ</th><td><p id="scenarioPl"></p></td>
             </tr>   
         </table>
-        <div id="scenarioPl"></div>
     </div>
 
     <footer>
