--- a/manager.html
+++ b/manager.html
@@ -50,9 +50,13 @@
                     <p id="managerColor"></p>
                 </td>
             </tr>
+        </table>
+        <table>
             <tr>
                 <th>KPとして参加したシナリオ</th> <td><p id="scenarioKp"></p></td>
             </tr>
+        </table>
+        <table>
             <tr>
                 <th>PLとして参加したシナリオ</th> <td><p id="scenarioPl"></p></td>
             </tr>   
