１番最初に戻してみた

--- a/manager.html
+++ b/manager.html
@@ -58,8 +58,9 @@
         </table>
         <table>
             <tr>
-                <th>PLとして参加したシナリオ</th><td><p id="scenarioPl"></p></td>
-            </tr>   
+                <th>PLとして参加したシナリオ</th><th>キャラクター</th>
+            </tr>
+            <tr id="scenarioPl"></tr>     
         </table>
     </div>
 
