--- a/manager.html
+++ b/manager.html
@@ -60,7 +60,9 @@
             <tr>
                 <th>PLとして参加したシナリオ</th><th>キャラクター</th>
             </tr>
-            <tr id="scenarioPl"></tr>     
+            <tr>
+                <td id="scenarioPl"></td> <td id="charaPl"></td>
+            </tr>     
         </table>
     </div>
 
