--- a/manager.html
+++ b/manager.html
@@ -47,7 +47,7 @@
                 <th>メンバーカラー</th> 
                 <td>
                     <p>ピンク</p>
-                    <p id="managerColor"></p>
+                    <p class="managerColor"></p>
                 </td>
             </tr>
         </table>
@@ -56,7 +56,7 @@
                 <th>KPとして参加したシナリオ</th> <td><p id="scenarioKp"></p></td>
             </tr>
         </table>
-        <table>
+        <table class="sinachara">
             <tr>
                 <th>PLとして参加したシナリオ</th><th>キャラクター</th>
             </tr>
