--- a/manager.html
+++ b/manager.html
@@ -42,12 +42,11 @@
 
     <!-- メンバーシート -->
     <div class="items">
-        <table>
+        <table class="managerColor">
             <tr>
                 <th>メンバーカラー</th> 
                 <td>
                     <p>ピンク</p>
-                    <p class="managerColor"></p>
                 </td>
             </tr>
         </table>
