--- a/manager.html
+++ b/manager.html
@@ -57,7 +57,7 @@
         </table>
         <table class="sinachara">
             <tr>
-                <th>PLとして参加したシナリオ</th><th>キャラクター</th>
+                <th class="memberLeft">PLとして参加したシナリオ</th><th class="memberRight">キャラクター</th>
             </tr>
             <tr>
                 <td id="scenarioPl"></td> <td id="charaPl"></td>
