--- a/manager.html
+++ b/manager.html
@@ -41,7 +41,7 @@
     </div>
 
     <!-- メンバーシート -->
-    <div class="items">
+    <div class="items member">
         <table class="managerColor">
             <tr>
                 <th>メンバーカラー</th> 
@@ -60,7 +60,7 @@
                 <th class="memberLeft">PLとして参加したシナリオ</th><th class="memberRight">キャラクター</th>
             </tr>
             <tr>
-                <td id="scenarioPl"></td> <td id="charaPl"></td>
+                <td class="memberLeft" id="scenarioPl"></td> <td class="memberRight" id="charaPl"></td>
             </tr>     
         </table>
     </div>
