--- a/nefrit.html
+++ b/nefrit.html
@@ -22,7 +22,7 @@
             <div class="header-left">
                 <img class="logo" src="header-logo1.gif">
             </div>
-            <div class="menu">
+            <div class="menu" onclick="menuRepeat()">
                 <span class="fa fa-bars menu-icon"></span>
 
                 <div class="home-index">
