--- a/nefrit.html
+++ b/nefrit.html
@@ -22,8 +22,8 @@
             <div class="header-left">
                 <img class="logo" src="header-logo1.gif">
             </div>
-            <div class="menu" onclick="menuRepeat()">
-                <span class="fa fa-bars menu-icon"></span>
+            <div class="menu">
+                <span class="fa fa-bars menu-icon" onclick="menuRepeat()"></span>
 
                 <div class="home-index">
                   <p><a href="home.html#i1">シナリオ一覧</a></p>
