--- a/nefrit.html
+++ b/nefrit.html
@@ -25,8 +25,8 @@
                 <img class="logo" src="header-logo1.gif">
             </div>
             <div class="menu">
-                <span class="fa fa-bars menu-icon" onclick="menuRepeat()"></span>
-                <span>
+                <span class="fa fa-bars menu-icon front"></span>
+                <span class="fa fa-bars menu-icon back"></span>
                 <div class="home-index">
                   <p><a href="home.html#i1">シナリオ一覧</a></p>
                     <p><a href="home.html#i2">キャラクター一覧</a></p>
