--- a/nefrit.html
+++ b/nefrit.html
@@ -28,9 +28,19 @@
                 <span class="fa fa-bars menu-icon front"></span>
                 <span class="fa fa-bars menu-icon back"></span>
                 <div class="home-index">
-                  <p><a href="home.html#i1">シナリオ一覧</a></p>
-                    <p><a href="home.html#i2">キャラクター一覧</a></p>
-                    <p><a href="home.html#i3">独り言卓メンバー一覧</a></p>
+                  <ul>
+                    <li><a href="home.html#i1">シナリオ一覧</a></li>
+                    <li><a href="home.html#i2">キャラクター一覧</a></li>
+                       <ul>
+                          <li><a href="home.html#i2d">運転手</a></li>
+                          <li><a href="home.html#i2m">管理人</a></li>
+                          <li><a href="home.html#i2b">上司</a></li>
+                          <li><a href="home.html#i2s">スピリチュアルな存在。</a></li>
+                          <li><a href="home.html#i2w">戦犯</a></li>
+                          <li><a href="home.html#i2c">創造主</a></li>
+                       </ul>
+                    <li><a href="home.html#i3">独り言卓メンバー一覧</a></li>
+                  </ul>
                 </div>
             </div>
         </div>
