--- a/nefrit.html
+++ b/nefrit.html
@@ -32,12 +32,12 @@
                     <li><a href="home.html#i1">シナリオ一覧</a></li>
                     <li><a href="home.html#i2">キャラクター一覧</a></li>
                        <ul>
-                          <li><a href="home.html#i2d">運転手</a></li>
-                          <li><a href="home.html#i2m">管理人</a></li>
-                          <li><a href="home.html#i2b">上司</a></li>
-                          <li><a href="home.html#i2s">スピリチュアルな存在。</a></li>
-                          <li><a href="home.html#i2w">戦犯</a></li>
-                          <li><a href="home.html#i2c">創造主</a></li>
+                          <li><a href="home.html#i2d" class="li2">運転手</a></li>
+                          <li><a href="home.html#i2m" class="li2">管理人</a></li>
+                          <li><a href="home.html#i2b" class="li2">上司</a></li>
+                          <li><a href="home.html#i2s" class="li2">スピリチュアルな存在。</a></li>
+                          <li><a href="home.html#i2w" class="li2">戦犯</a></li>
+                          <li><a href="home.html#i2c" class="li2">創造主</a></li>
                        </ul>
                     <li><a href="home.html#i3">独り言卓メンバー一覧</a></li>
                   </ul>
