--- a/kurenai.html
+++ b/kurenai.html
@@ -23,12 +23,22 @@
                 <img class="logo" src="header-logo1.gif">
             </div>
             <div class="menu">
-                <span class="fa fa-bars menu-icon"></span>
-
+                <span class="fa fa-bars menu-icon front"></span>
+                <span class="fa fa-bars menu-icon back"></span>
                 <div class="home-index">
-                    <p><a href="home.html#i1">シナリオ一覧</a></p>
-                    <p><a href="home.html#i2">キャラクター一覧</a></p>
-                    <p><a href="home.html#i3">独り言卓メンバー一覧</a></p>
+                  <ul>
+                    <li><a href="home.html#i1">シナリオ一覧</a></li>
+                    <li><a href="home.html#i2">キャラクター一覧</a></li>
+                       <ul>
+                          <li><a href="home.html#i2d" class="li2">運転手</a></li>
+                          <li><a href="home.html#i2m" class="li2">管理人</a></li>
+                          <li><a href="home.html#i2b" class="li2">上司</a></li>
+                          <li><a href="home.html#i2s" class="li2">スピリチュアルな存在。</a></li>
+                          <li><a href="home.html#i2w" class="li2">戦犯</a></li>
+                          <li><a href="home.html#i2c" class="li2">創造主</a></li>
+                       </ul>
+                    <li><a href="home.html#i3">独り言卓メンバー一覧</a></li>
+                  </ul>
                 </div>
             </div>
         </div>
