--- a/home.html
+++ b/home.html
@@ -142,12 +142,12 @@
         <div class="list">
           <h2 id="i3">独り言卓メンバー一覧</h2>
             <ul>
-                <li><a href="#">運転手</a></li>
-                <li><a href="#">管理人</a></li>
-                <li><a href="#">上司</a></li>
-                <li><a href="#">スピリチュアルな存在。</a></li>
-                <li><a href="#">戦犯</a></li>
-                <li><a href="#">創造主</a></li>
+                <li><a href="driver.html">運転手</a></li>
+                <li><a href="manager.html">管理人</a></li>
+                <li><a href="boss.html">上司</a></li>
+                <li><a href="spritual.html">スピリチュアルな存在。</a></li>
+                <li><a href="warcrim.html">戦犯</a></li>
+                <li><a href="creator.html">創造主</a></li>
             </ul>
         </div>
     </div>
