--- a/nefrit.html
+++ b/nefrit.html
@@ -64,8 +64,8 @@
           <div class="index-btn">5</div>
          </div>
          <ul class="slides">
-           <li class="slide active"><img src="nefrit1.png"></li>
-           <li class="slide"><img src="nefrit2.jpg"></li>
+           <li class="slide active"><img src="https://cloud.degoo.com/share/_6tLIJYD7aTiuVQtg8z0Yw"></li>
+           <li class="slide"><img src="https://cloud.degoo.com/share/YVLTAf0Xi-h52H8Vr7Te8Q"></li>
            <li class="slide"><img src="nefrit3.jpeg"></li>
            <li class="slide"><img src="nefrit4.jpeg"></li>
            <li class="slide"><img src="nefrit5.jpeg"></li>
