--- a/nefrit.html
+++ b/nefrit.html
@@ -64,7 +64,7 @@
           <div class="index-btn">5</div>
          </div>
          <ul class="slides">
-           <li class="slide active"><img src="https://cloud.degoo.com/share/_6tLIJYD7aTiuVQtg8z0Yw"></li>
+           <li class="slide active"><img src="https://www.mediafire.com/view/8we9y7iacf7nieo/nefrit1.png/file"></li>
            <li class="slide"><img src="https://cloud.degoo.com/share/YVLTAf0Xi-h52H8Vr7Te8Q"></li>
            <li class="slide"><img src="nefrit3.jpeg"></li>
            <li class="slide"><img src="nefrit4.jpeg"></li>
