--- a/nefrit.html
+++ b/nefrit.html
@@ -64,7 +64,7 @@
           <div class="index-btn">5</div>
          </div>
          <ul class="slides">
-           <li class="slide active"><img src="https://www.mediafire.com/view/8we9y7iacf7nieo"></li>
+           <li class="slide active"><img src="https://lh3.googleusercontent.com/XScxHCGxp5l4jG6BtFZ0hYlBJVFKGHyK_v3iEMiIm-DS3B4x3ER2Un9zJBNxZ_OjlUkrY0x9lFDImMvBeuMvtN0CaunYoEl12t_Gtg=w1536-h775-rw-sm-pa-nu-v0"></li>
            <li class="slide"><img src="https://cloud.degoo.com/share/YVLTAf0Xi-h52H8Vr7Te8Q"></li>
            <li class="slide"><img src="nefrit3.jpeg"></li>
            <li class="slide"><img src="nefrit4.jpeg"></li>
