--- a/nefrit.html
+++ b/nefrit.html
@@ -65,7 +65,7 @@
          </div>
          <ul class="slides">
            <li class="slide active"><img src="https://lh3.googleusercontent.com/XScxHCGxp5l4jG6BtFZ0hYlBJVFKGHyK_v3iEMiIm-DS3B4x3ER2Un9zJBNxZ_OjlUkrY0x9lFDImMvBeuMvtN0CaunYoEl12t_Gtg=w1536-h775-rw-sm-pa-nu-v0"></li>
-           <li class="slide"><img src="https://cloud.degoo.com/share/YVLTAf0Xi-h52H8Vr7Te8Q"></li>
+           <li class="slide"><img src="https://lh3.googleusercontent.com/xETGQ8_RpQFTch7Sbjo0bktxzGe6JZYLVMkVfmMDk9jHXTQxifAdNxKBbvdR40bArX7WojFjipvPgYlnnKxdQ_F_J59QElpxDGQSzg=w1536-h775-rw-sm-pa-nu-v0"></li>
            <li class="slide"><img src="nefrit3.jpeg"></li>
            <li class="slide"><img src="nefrit4.jpeg"></li>
            <li class="slide"><img src="nefrit5.jpeg"></li>
