コメント、URL、アイコン追加したい

--- a/manager.html
+++ b/manager.html
@@ -47,10 +47,13 @@
     <!-- メンバー名 -->
     <div class="top">
         <h1 class="title">管理人</h1>
+        <p>コメント</p>
+        <p>Twitter：</p>
     </div>
 
     <!-- メンバーシート -->
     <div class="items member">
+        <p>画像</p>
         <table class="managerColor">
             <tr>
                 <th>メンバーカラー</th> 
