--- a/home.html
+++ b/home.html
@@ -141,38 +141,38 @@
         
         <div class="list">
           <h2 id="i3">独り言卓メンバー一覧</h2>
-          <div class="items">
-            <div class="item">
+          <div class="mems">
+            <div class="mem">
               <a href="driver.html">
                 <img src="driver.png">
                 <p>運転手</p>
               </a>
             </div>
-            <div class="item">
+            <div class="mem">
               <a href="manager.html">
                 <img src="manager.png">
                 <p>管理人</p>
               </a>
             </div>
-            <div class="item">
+            <div class="mem">
               <a href="boss.html">
                 <img src="boss.png">
                 <p>上司</p>
               </a>
             </div>
-            <div class="item">
+            <div class="mem">
               <a href="spritual.html">
                 <img src="spiritual.png">
                 <p>スピリチュアルな存在。</p>
               </a>
             </div>
-            <div class="item">
+            <div class="mem">
               <a href="warcrim.html">
                 <img src="warcrim.png">
                 <p>戦犯</p>
               </a>
             </div>
-            <div class="item">
+            <div class="mem">
               <a href="creator.html">
                 <img src="creator.png">
                 <p>創造主</p>
