ニーフリット　height

--- a/nefrit.html
+++ b/nefrit.html
@@ -66,9 +66,6 @@
          <ul class="slides">
            <li class="slide active"><img src="https://lh3.googleusercontent.com/XScxHCGxp5l4jG6BtFZ0hYlBJVFKGHyK_v3iEMiIm-DS3B4x3ER2Un9zJBNxZ_OjlUkrY0x9lFDImMvBeuMvtN0CaunYoEl12t_Gtg=w1536-h775-rw-sm-pa-nu-v0"></li>
            <li class="slide"><img src="https://lh3.googleusercontent.com/xETGQ8_RpQFTch7Sbjo0bktxzGe6JZYLVMkVfmMDk9jHXTQxifAdNxKBbvdR40bArX7WojFjipvPgYlnnKxdQ_F_J59QElpxDGQSzg=w1536-h775-rw-sm-pa-nu-v0"></li>
-           <li class="slide"><img src="nefrit3.jpeg"></li>
-           <li class="slide"><img src="nefrit4.jpeg"></li>
-           <li class="slide"><img src="nefrit5.jpeg"></li>
          </ul>
          <div class="change-btn-wrapper">
           <div class="change-btn prev-btn">← 前へ</div>
@@ -84,6 +81,9 @@
         </tr>
         <tr>
             <th>性別</th> <td><p id="sex"></p></td>
+        </tr>
+        <tr>
+            <th>身長</th> <td><p id="height"></p></td>
         </tr>
         <tr>
             <th>職業</th> <td><p id="job"></p></td>
