--- a/nefrit.html
+++ b/nefrit.html
@@ -66,6 +66,7 @@
          <ul class="slides">
            <li class="slide active"><img src="https://lh3.googleusercontent.com/XScxHCGxp5l4jG6BtFZ0hYlBJVFKGHyK_v3iEMiIm-DS3B4x3ER2Un9zJBNxZ_OjlUkrY0x9lFDImMvBeuMvtN0CaunYoEl12t_Gtg=w1536-h775-rw-sm-pa-nu-v0"></li>
            <li class="slide"><img src="https://lh3.googleusercontent.com/xETGQ8_RpQFTch7Sbjo0bktxzGe6JZYLVMkVfmMDk9jHXTQxifAdNxKBbvdR40bArX7WojFjipvPgYlnnKxdQ_F_J59QElpxDGQSzg=w1536-h775-rw-sm-pa-nu-v0"></li>
+           <li class="slide"><img src="https://media.discordapp.net/attachments/795089671872053279/1021697011092828211/IMG_2063.png"></li>
          </ul>
          <div class="change-btn-wrapper">
           <div class="change-btn prev-btn">← 前へ</div>
