--- a/ataoka6.html
+++ b/ataoka6.html
@@ -9,7 +9,7 @@
     <link rel="shortcut icon" href="favicon.ico">
     <link rel="icon" type="image/png" href="android-chrome-256x256.png">
     
-    <link rel="stylesheet" href="stylesheet.css">
+    <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="responsive.css">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 
