Update and rename nefrit.html to Nefrit.html

--- a/Nefrit.html
+++ b/Nefrit.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>独り言卓INDEX</title>
+    <title>ニーフリット/独り言卓INDEX</title>
     
     <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
     <link rel="shortcut icon" href="favicon.ico">
@@ -62,12 +62,15 @@
           <div class="index-btn">3</div>
           <div class="index-btn">4</div>
           <div class="index-btn">5</div>
+          <div class="index-btn">6</div>
          </div>
          <ul class="slides">
-           <li class="slide active"><img src="https://lh3.googleusercontent.com/XScxHCGxp5l4jG6BtFZ0hYlBJVFKGHyK_v3iEMiIm-DS3B4x3ER2Un9zJBNxZ_OjlUkrY0x9lFDImMvBeuMvtN0CaunYoEl12t_Gtg=w1536-h775-rw-sm-pa-nu-v0"></li>
+           <li class="slide active"><img src="" id="icon"></li>
            <li class="slide"><img src="https://lh3.googleusercontent.com/xETGQ8_RpQFTch7Sbjo0bktxzGe6JZYLVMkVfmMDk9jHXTQxifAdNxKBbvdR40bArX7WojFjipvPgYlnnKxdQ_F_J59QElpxDGQSzg=w1536-h775-rw-sm-pa-nu-v0"></li>
            <li class="slide"><img src="https://media.discordapp.net/attachments/795089671872053279/1021697011092828211/IMG_2063.png"></li>
            <li class="slide"><img src="https://pbs.twimg.com/media/FXoyaO3UsAAGVur?format=jpg&name=medium"></li>
+           <li class="slide"><img src="https://renaruna.github.io/test/manager.png"></li>
+           <li class="slide"><img src=""></li>
          </ul>
          <div class="change-btn-wrapper">
           <div class="change-btn prev-btn">← 前へ</div>
