--- a/manager.html
+++ b/manager.html
@@ -55,7 +55,7 @@
     <!-- メンバーシート -->
     <div class="items member">
         <img id="manager-icon" src="manager.png">
-        <p>コメント</p>
+        <p>うわああああああああああああああああああああああああああああああああああああああああああい</p>
       
         <table class="managerColor">
             <tr>
