--- a/manager.html
+++ b/manager.html
@@ -47,9 +47,9 @@
     <!-- メンバー名 -->
     <div class="top">
         <h1 class="title">管理人</h1>
-        <p>Twitter：<a href="https://twitter.com/nefrit_john">https://twitter.com/nefrit_john</a></p>
-        <p>ふせったー：<a href="https://fusetter.com/u/nefrit_john">https://fusetter.com/u/nefrit_john</a></p>
-        <p>poipiku：<a href="https://poipiku.com/4908609/">https://poipiku.com/4908609/</a></p>
+        <p>Twitter：<a href="https://twitter.com/nefrit_john">twitter.com/nefrit_john</a></p>
+        <p>ふせったー：<a href="https://fusetter.com/u/nefrit_john">fusetter.com/u/nefrit_john</a></p>
+        <p>poipiku：<a href="https://poipiku.com/4908609/">poipiku.com/4908609/</a></p>
     </div>
 
     <!-- メンバーシート -->
