--- a/home.html
+++ b/home.html
@@ -50,8 +50,8 @@
       <h1 class="topper-title">独り言卓</h1>
       <div class="index">
           <ul>
-              <li><a href="#i1">シナリオ一覧</a></li>
-              <li><a href="#i2">キャラクター一覧</a></li>
+              <li class="li1"><a href="#i1">シナリオ一覧</a></li>
+              <li class="li1"><a href="#i2">キャラクター一覧</a></li>
                  <ul>
                     <li><a href="#i2d">運転手</a></li>
                     <li><a href="#i2m">管理人</a></li>
@@ -60,7 +60,7 @@
                     <li><a href="#i2w">戦犯</a></li>
                     <li><a href="#i2c">創造主</a></li>
                   </ul>
-              <li><a href="#i3">独り言卓メンバー一覧</a> </li>
+              <li class="li1"><a href="#i3">独り言卓メンバー一覧</a> </li>
           </ul>
       </div>
     </div>
